--- a/trekkers_backend/package.json
+++ b/trekkers_backend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "trekkers_backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x",
+    "npm":"6.x"
+  },
   "description": "This is backend for trekkers project",
   "main": "app.js",
   "scripts": {
@@ -20,5 +24,7 @@
     "mongoose": "^5.10.9",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
